alignment center fix

--- a/css/embedvideo.css
+++ b/css/embedvideo.css
@@ -1,6 +1,7 @@
 div.tcenter.embedvideo, div.embedvideo.ev_center {
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
 }
 
 div.embedvideo.ev_left {
